--- a/index.html
+++ b/index.html
@@ -1,91 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Tags and Title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ServiceNow Quiz - Test</title>
+    <title>ServiceNow Quiz</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Optional Bootstrap Theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap-theme.min.css">
+
+    <!-- Custom Styles -->
     <style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
             color: #333;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 2.5em;
-            color: #007bff;
-        }
-
-        h3 {
-            font-size: 1.2em;
-            margin-bottom: 10px;
-            color: #333;
-        }
-
-        .options button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            font-size: 1.1em;
-            border: 2px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            background-color: #ffffff;
-        }
-
-        .options button:hover {
-            background-color: #f1f1f1;
-        }
-
-        .correct {
-            background-color: #d4edda;
-            border-color: #28a745;
-            color: #155724;
-        }
-
-        .incorrect {
-            background-color: #f8d7da;
-            border-color: #dc3545;
-            color: #721c24;
-        }
-
-        .nav-btns {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .nav-btns button {
-            margin: 10px;
-            padding: 10px 20px;
-            font-size: 1.1em;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .nav-btns button:hover {
-            background-color: #0056b3;
-        }
-
-        .hidden {
-            display: none;
         }
 
         .section-button {
@@ -95,43 +26,104 @@
             margin-bottom: 10px;
             font-size: 1.2em;
             text-align: left;
-            background-color: #007bff;
-            color: white;
-            border: none;
             border-radius: 5px;
-            cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
         .section-button:hover {
             background-color: #0056b3;
+            color: #fff;
+        }
+
+        .correct {
+            background-color: #28a745 !important;
+            color: #fff !important;
+            border-color: #28a745 !important;
+        }
+
+        .incorrect {
+            background-color: #dc3545 !important;
+            color: #fff !important;
+            border-color: #dc3545 !important;
+        }
+
+        .options button:disabled {
+            cursor: not-allowed;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        /* Progress Bar Styling */
+        .progress {
+            height: 20px;
+        }
+
+        .progress-bar {
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <h1 id="title">ServiceNow Quiz</h1>
-        
-        <div id="homepage">
-            <button class="section-button" onclick="openSection('platformOverview')">1 - Platform Overview and Navigation</button>
-            <button class="section-button" onclick="openSection('instanceConfig')">2 - Instance Configuration</button>
-            <button class="section-button" onclick="openSection('appCollab')">3 - Configuring Applications for Collaboration</button>
-            <button class="section-button" onclick="openSection('selfService')">4 - Self Service & Automation</button>
-            <button class="section-button" onclick="openSection('dbManagement')">5 - Database Management</button>
-            <button class="section-button" onclick="openSection('dataMigration')">6 - Data Migration and Integration</button>
+    <div class="container mt-5">
+        <h1 id="title" class="text-center mb-4">ServiceNow Quiz</h1>
+
+        <!-- Homepage -->
+        <div id="homepage" class="row">
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('platformOverview')">1 - Platform Overview and Navigation</button>
+            </div>
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('instanceConfig')">2 - Instance Configuration</button>
+            </div>
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('appCollab')">3 - Configuring Applications for Collaboration</button>
+            </div>
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('selfService')">4 - Self Service & Automation</button>
+            </div>
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('dbManagement')">5 - Database Management</button>
+            </div>
+            <div class="col-md-6 mb-3">
+                <button class="btn btn-primary btn-block py-3" onclick="openSection('dataMigration')">6 - Data Migration and Integration</button>
+            </div>
         </div>
 
+        <!-- Progress Bar -->
+        <div id="progressContainer" class="hidden">
+            <div class="progress mb-4">
+                <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+            </div>
+        </div>
+
+        <!-- Quiz Content -->
         <div id="quiz" class="hidden"></div>
 
+        <!-- Navigation Buttons -->
         <div class="nav-btns hidden">
-            <button id="backBtn" class="hidden" onclick="goBack()">Home</button>
-            <button id="prevBtn" class="hidden" onclick="changePage(-1)">Previous</button>
-            <button id="nextBtn" class="hidden" onclick="changePage(1)">Next</button>
+            <button id="backBtn" class="btn btn-secondary mr-2" onclick="goBack()">Home</button>
+            <button id="prevBtn" class="btn btn-primary mr-2" onclick="changePage(-1)">Previous</button>
+            <button id="nextBtn" class="btn btn-primary" onclick="changePage(1)">Next</button>
+        </div>
+
+        <!-- Result Section -->
+        <div id="result" class="text-center hidden">
+            <h2>Your Score: <span id="score"></span></h2>
+            <p>Thank you for taking the quiz!</p>
+            <button class="btn btn-success" onclick="goBack()">Return to Home</button>
         </div>
     </div>
 
+    <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Quiz Script -->
     <script>
+        
         const sections = {
             platformOverview: [
     {
@@ -1599,55 +1591,78 @@ dataMigration: [
         const questionsPerPage = 5;
         let currentPage = 0;
         let currentSection = '';
+        let score = 0;
+        let sectionQuestions = [];
+        let totalPages = 0;
 
         // Function to render quiz
         function renderQuiz() {
             const quizContainer = document.getElementById('quiz');
             quizContainer.innerHTML = ''; // Clear previous content
 
-            const sectionQuestions = sections[currentSection];
             const start = currentPage * questionsPerPage;
             const end = Math.min(start + questionsPerPage, sectionQuestions.length);
             const pageQuestions = sectionQuestions.slice(start, end);
 
             pageQuestions.forEach((q, index) => {
-                const questionDiv = document.createElement('div');
-                questionDiv.classList.add('question');
-                questionDiv.innerHTML = `<h3>${start + index + 1}. ${q.question}</h3>`;
+                const questionCard = document.createElement('div');
+                questionCard.classList.add('card', 'mb-4');
+
+                const cardBody = document.createElement('div');
+                cardBody.classList.add('card-body');
+
+                cardBody.innerHTML = `
+                    <h5 class="card-title">${start + index + 1}. ${q.question}</h5>
+                `;
 
                 const optionsDiv = document.createElement('div');
-                optionsDiv.classList.add('options');
+                optionsDiv.classList.add('list-group');
 
                 q.options.forEach((option) => {
                     const button = document.createElement('button');
                     button.textContent = option.answer;
-                    button.onclick = () => checkAnswer(button, option.correct);
+                    button.classList.add('list-group-item', 'list-group-item-action');
+                    button.onclick = () => checkAnswer(button, option.correct, q);
                     optionsDiv.appendChild(button);
                 });
 
-                questionDiv.appendChild(optionsDiv);
-                quizContainer.appendChild(questionDiv);
+                cardBody.appendChild(optionsDiv);
+                questionCard.appendChild(cardBody);
+                quizContainer.appendChild(questionCard);
             });
 
             document.getElementById('prevBtn').classList.toggle('hidden', currentPage === 0);
             document.getElementById('nextBtn').classList.toggle('hidden', end >= sectionQuestions.length);
             document.getElementById('backBtn').classList.remove('hidden');
+
+            // Update Progress Bar
+            updateProgressBar();
         }
 
         // Function to check answer
-        function checkAnswer(button, isCorrect) {
+        function checkAnswer(button, isCorrect, question) {
             const buttons = button.parentElement.querySelectorAll('button');
             buttons.forEach(btn => btn.disabled = true);
 
             if (isCorrect) {
                 button.classList.add('correct');
+                score++;
             } else {
                 button.classList.add('incorrect');
+                // Highlight the correct answer
                 buttons.forEach(btn => {
-                    if (btn.textContent === button.parentElement.querySelector('button.correct')?.textContent) {
+                    const option = question.options.find(opt => opt.answer === btn.textContent);
+                    if (option.correct) {
                         btn.classList.add('correct');
                     }
                 });
+            }
+
+            // Check if all questions have been answered
+            const totalQuestions = sectionQuestions.length;
+            const answeredQuestions = document.querySelectorAll('.options button[disabled]').length;
+            if (answeredQuestions >= totalQuestions) {
+                showResult();
             }
         }
 
@@ -1661,10 +1676,17 @@ dataMigration: [
         function openSection(section) {
             currentSection = section;
             currentPage = 0;
+            score = 0;
+            sectionQuestions = sections[currentSection];
+            totalPages = Math.ceil(sectionQuestions.length / questionsPerPage);
+
             document.getElementById('homepage').classList.add('hidden');
             document.getElementById('quiz').classList.remove('hidden');
             document.querySelector('.nav-btns').classList.remove('hidden');
+            document.getElementById('progressContainer').classList.remove('hidden');
+            document.getElementById('result').classList.add('hidden');
             document.getElementById('title').textContent = `Quiz: ${section.replace(/([A-Z])/g, ' $1')}`;
+
             renderQuiz();
         }
 
@@ -1673,11 +1695,33 @@ dataMigration: [
             document.getElementById('homepage').classList.remove('hidden');
             document.getElementById('quiz').classList.add('hidden');
             document.querySelector('.nav-btns').classList.add('hidden');
+            document.getElementById('progressContainer').classList.add('hidden');
+            document.getElementById('result').classList.add('hidden');
             document.getElementById('title').textContent = 'ServiceNow Quiz';
         }
 
-        // Initialize the quiz
+        // Function to update progress bar
+        function updateProgressBar() {
+            const progressBar = document.getElementById('progressBar');
+            const progress = ((currentPage) / totalPages) * 100;
+            progressBar.style.width = `${progress}%`;
+            progressBar.setAttribute('aria-valuenow', progress);
+            progressBar.textContent = `${Math.round(progress)}%`;
+        }
+
+        // Function to show result
+        function showResult() {
+            document.getElementById('quiz').classList.add('hidden');
+            document.querySelector('.nav-btns').classList.add('hidden');
+            document.getElementById('progressContainer').classList.add('hidden');
+            document.getElementById('result').classList.remove('hidden');
+            document.getElementById('score').textContent = `${score} / ${sectionQuestions.length}`;
+        }
     </script>
 
 </body>
 </html>
+
+
+
+
