--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         const sections = {
             platformOverview: [
     {
-        question: "1. What is the purpose of the 'Application Navigator' in ServiceNow?",
+        question: "What is the purpose of the 'Application Navigator' in ServiceNow?",
         options: [
             { answer: "To manage user permissions and roles.", correct: false },
             { answer: "To provide a search and browse interface for accessing all applications and modules.", correct: true },
@@ -136,7 +136,7 @@
         ]
     },
     {
-        question: "2. How can a user quickly filter the items displayed in the Application Navigator?",
+        question: "How can a user quickly filter the items displayed in the Application Navigator?",
         options: [
             { answer: "By adjusting their user preferences.", correct: false },
             { answer: "By typing keywords into the Filter Navigator field.", correct: true },
@@ -145,7 +145,7 @@
         ]
     },
     {
-        question: "3. What is the primary function of the 'Edge' in ServiceNow's UI?",
+        question: "What is the primary function of the 'Edge' in ServiceNow's UI?",
         options: [
             { answer: "To provide quick access to recently viewed items and favorites.", correct: true },
             { answer: "To display system notifications and alerts.", correct: false },
